# ChangeLog for sys-kernel/lh-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*lh-sources-3.1.0 (30 Oct 2011)
*lh-sources-3.0.7 (30 Oct 2011)

  30 Oct 2011; Justin Lecher <jlec@gentoo.org> +files/3.0.7-file-caching.patch,
  +files/3.1.0-file-caching.patch, +lh-sources-3.0.7.ebuild,
  +lh-sources-3.1.0.ebuild:
  Version Bump

*lh-sources-3.0.6 (04 Oct 2011)

  04 Oct 2011; Justin Lecher <jlec@gentoo.org> +files/3.0.6-file-caching.patch,
  +lh-sources-3.0.6.ebuild, metadata.xml:
  Version Bump

*lh-sources-3.0.4 (30 Aug 2011)

  30 Aug 2011; Justin Lecher <jlec@gentoo.org> +files/3.0.4-file-caching.patch,
  +lh-sources-3.0.4.ebuild:
  Version Bump

*lh-sources-3.0.3 (18 Aug 2011)

  18 Aug 2011; Justin Lecher <jlec@gentoo.org> +files/3.0.3-file-caching.patch,
  +lh-sources-3.0.3.ebuild:
  Version Bump

*lh-sources-3.0.1 (16 Aug 2011)

  16 Aug 2011; Justin Lecher <jlec@gentoo.org> +files/3.0.1-file-caching.patch,
  +lh-sources-3.0.1.ebuild:
  Version Bump

*lh-sources-3.0 (22 Jul 2011)

  22 Jul 2011; Justin Lecher <jlec@gentoo.org> +files/3.0-file-caching.patch,
  -files/2.6.35-file-caching.patch, -files/2.6.37-file-caching.patch,
  -files/2.6.38-file-caching.patch, -lh-sources-2.6.39.ebuild,
  -lh-sources-2.6.39-r1.ebuild, -lh-sources-2.6.39-r2.ebuild,
  +lh-sources-3.0.ebuild:
  Version Bump

*lh-sources-2.6.39-r3 (13 Jul 2011)

  13 Jul 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-2.6.39-r3.ebuild,
  metadata.xml:
  Bump to genpatches 5

  25 Jun 2011; Justin Lecher <jlec@gentoo.org> -lh-sources-2.6.35-r15.ebuild,
  -lh-sources-2.6.37.ebuild, -lh-sources-2.6.37-r1.ebuild,
  -lh-sources-2.6.37-r2.ebuild, -lh-sources-2.6.38.ebuild,
  -lh-sources-2.6.38-r1.ebuild, -lh-sources-2.6.38-r2.ebuild,
  -lh-sources-2.6.38-r3.ebuild, -lh-sources-2.6.38-r4.ebuild,
  -lh-sources-2.6.38-r5.ebuild, -lh-sources-2.6.38-r6.ebuild:
  Cleaned old

*lh-sources-2.6.39-r2 (25 Jun 2011)
