@@ -31,6 +31,8 @@ DIST genpatches-3.0-9.base.tar.bz2 229050 RMD160 2c9832e195851a10b327a74de668d4f
 DIST genpatches-3.0-9.extras.tar.bz2 17207 RMD160 0f04fef1fe76c9b9cbe7c497faae19b015caff72 SHA1 89935647c22c0a8b98dd568e97312ca64378a263 SHA256 ec88ca4408c668a2c4d2d25c3d4a8c67fad4bb08133db91bbb929c0053305fda
 DIST genpatches-3.1-2.base.tar.bz2 15340 RMD160 1345005dcfba914ce3624c1a3bded3d1e9bceeb4 SHA1 767a9c1f44e4a1d5ef6fa2bc3b561a025d649a27 SHA256 4dce02076ceef699c0745be01751534940c81ad0c3ef4f3774dd5315128eb477
 DIST genpatches-3.1-2.extras.tar.bz2 17209 RMD160 434606bedb4e8fb3762e14697e7fab16dbcae234 SHA1 a72fd512eaa54f80faf9ee9796a6b7c3dc3436ae SHA256 4d8363e156c98d56ae8612ca0a73ea439e5318038e9a99fed9d7bedc00b04b1d
+DIST genpatches-3.1-3.base.tar.bz2 15976 RMD160 6d489eebebc05e4dcf86b5aafd6375580466a497 SHA1 0ebd6a5af7687e1ce290d7bbd9b16997c4ddf2f4 SHA256 ad41964853e5100e6b63900a3745548f93aedf457199e321ea11c1e97e0a0dba
+DIST genpatches-3.1-3.extras.tar.bz2 17197 RMD160 a275874317e13fc9f372eb6cdb08b79d67df5201 SHA1 85ed96b1602df0f1f68bc8c88de905cf5d1b0a5e SHA256 aee5dcccb9abc251d31caa0d565b78800cbc8e111cfa02b433cf6ebbdf04d4ea
 DIST linux-2.6.39.tar.bz2 76096559 RMD160 feddc516bc15e78f12f611ff184d38baa4eac4ee SHA1 68518112821e55f4ac1df64f2e0e809cedfcc5ef SHA256 584d17f2a3ee18a9501d7ff36907639e538cfdba4529978b8550c461d45c61f6
 DIST linux-3.0.tar.bz2 76753134 RMD160 e20c9564ec0c8128e28a4c038986d4d93bbe34bb SHA1 45b64bffc860f70ab7956da4493c488010714650 SHA256 64b0228b54ce39b0b2df086109a7b737cde58e3df4f779506ddcaccee90356a0
 DIST linux-3.1.tar.bz2 77190238 RMD160 f9a3ce57b9f20a1402ef340792d3c223140ce1d2 SHA1 ac792701561b1cd4279302b8bb8f474731762ad1 SHA256 2573d2378c754b0c602b57586e9311e5b38c5d1e6c137f02873833633a4b9359
@@ -41,13 +43,14 @@ EBUILD lh-sources-3.0.4.ebuild 927 RMD160 78eff940f268c11d40afa0e66b62d290587d2e
 EBUILD lh-sources-3.0.6.ebuild 927 RMD160 545549de56fc88d4aa0fd7ada897c109f760abc7 SHA1 2db15d4e71a1d9d6056bbbd4765f25ffcb5f56f2 SHA256 994c86832a9b1ecc931cb0ea6b30c0fa0e180c26a8bf4e91bc11aaaaa254e435
 EBUILD lh-sources-3.0.7.ebuild 927 RMD160 c528d40be2325042121503e6241d7226df3e7238 SHA1 76a7c68a187521fed06bca7530e1b5ce7925929f SHA256 504faa47e1a3696c48c7485b4281ffabd94bbc44461407a187778220b2372a64
 EBUILD lh-sources-3.0.ebuild 888 RMD160 e9b1788f3895ffd0876d9b8132784e15067f5700 SHA1 862bf5d41083c569e1ec80108796b4d0309a6678 SHA256 9242edfa7a4fbd8233d10b2714580ecb5f2df92aaf088fb1073af446ec77a09f
+EBUILD lh-sources-3.1.0-r1.ebuild 927 RMD160 cec1576577b404e2b511f202e7bedb300a91dadb SHA1 0408589307de9c4634448508d5a23f5654898ee0 SHA256 dffb71affa1ece6679cc32b584f36329e3985e89da4877fb9a71978bf853956a
 EBUILD lh-sources-3.1.0.ebuild 927 RMD160 572793a040616ca5780d411342fdfc741771478c SHA1 fd46a4e7284b2a7c3f3e87aee9596defdf8b8808 SHA256 3732428c2c88a74b4eb06ab1c6da44603bb496726da480700657b4a185ee23ca
-MISC ChangeLog 4134 RMD160 d0c183ee5fbc975048689cc4dd03ec3a83023795 SHA1 a7ae0d1d7cf6f752e30ca054bae4048cbb232629 SHA256 5bcaf65b02be6d9c9d21b57eda75ba28246c7ee774419115b0d9503d7367bd43
+MISC ChangeLog 4278 RMD160 4805a00b958cdb44f53303e9fe6901bb05a14986 SHA1 dc1fbbd4012a96d5c069a72d482d3701d5483d2f SHA256 08470a5fb580706979a0831b748c7805c5dae611083c97a729524f49eaac7d8e
 MISC metadata.xml 322 RMD160 a52cf0e8c44c43c1e00f471819402a7c285d556b SHA1 de7633ea96633b285db9a303a5e390816f17b991 SHA256 576a908a4ed2228217d564ba7c2e1b3173ceacfc88258073d9b07698746870dc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEAREKAAYFAk6tQuYACgkQgAnW8HDreRbcEgCfRin6wPDlYi7ogOoimkx7eSZv
-yJ4AoLawINvReUvKr8qiGZeGZXTFzIGt
-=hgQj
+iEYEAREKAAYFAk68+JYACgkQgAnW8HDreRYQQQCaAnXL/c02GhjBrXIzegljFyPj
+IooAniKqisa/PV5V8QQNINq5SzlZKt55
+=2HBG
 -----END PGP SIGNATURE-----
