@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lh-sources-3.1.0-r1 (11 Nov 2011)
+
+  11 Nov 2011; Justin Lecher <jlec@gentoo.org> +lh-sources-3.1.0-r1.ebuild:
+  Version Bump to genpatches 3
+
 *lh-sources-3.1.0 (30 Oct 2011)
 *lh-sources-3.0.7 (30 Oct 2011)
 
